--- a/application/templates/install.html
+++ b/application/templates/install.html
@@ -3,15 +3,10 @@
 
 {% block statusbar %}{% endblock %}
 
-{% block header %}{% endblock %}
+{% block header %}
+
+{% endblock %}
 
 {% block content %}
 
-<h1>Installation</h1>
-<ul>
-{% for message in messages %}
-<li>{{message}}</li>
-
-{% endfor %}
-</ul>
 {% endblock %}
