--- a/application/templates/upload.html
+++ b/application/templates/upload.html
@@ -10,23 +10,26 @@
 		<strong>Upload new files (spreadsheets, attachments)</strong>
 	</div>
 	<div class="panel-body">
-	<p>
-	Please keep the following in mind when uploading spreadsheets:
-	<ul>
-		<li>Uploaded data is overwritten, not appended to!</li>
-		<li>The name of the sheet is used to identify the feature layer, make sure it's unique and has a clear name.</li>
-		<li>Ensure that any spreadsheet has header information (column or attribute names) on the first row, and that any rows below that are features.</li>
-		{% if current_user.is_admin %}
-		<li>You are currently an administrator working in another user's workspace!</li>
-		{% endif %}
-	</ul>
-	</p>
+	{% if current_user.id != user.id %}
+		<p>
+		It is not possible (even for administrators or supervisors) to upload data to another user's workspace.
+		</p>
+	{% else %}
+		<p>
+			Please keep the following in mind when uploading spreadsheets:
+			<ul>
+				<li>Uploaded data is overwritten, not appended to!</li>
+				<li>The name of the sheet is used to identify the feature layer, make sure it's unique and has a clear name.</li>
+				<li>Ensure that any spreadsheet has header information (column or attribute names) on the first row, and that any rows below that are features.</li>
+			</ul>
+		</p>
 		<form role="form" action="file" method="post" enctype="multipart/form-data">
-		<div class="form-group">
-			<input type="file" name="uploadfile">
-		</div>
-		<button type="submit" class="btn btn-primary btn-sm">Upload file <i class="fa fa-long-arrow-right"></i></button>
+			<div class="form-group">
+				<input type="file" name="uploadfile">
+			</div>
+			<button type="submit" class="btn btn-primary btn-sm">Upload file <i class="fa fa-long-arrow-right"></i></button>
 		</form>
+	{%endif%}
 	</div>
 </div>
 
@@ -34,64 +37,68 @@
 	<div class="panel-heading">
 		<strong>Overview of uploaded feature data layers</strong>
 	</div>
-	<div class="panel-body" style="padding:0;">
-		{% if not attachments %}
+	{% if not features %}
+		<div class="panel-body">
 			<p>No points have been uploaded yet.</p>
-		{% endif %}
-		<table class="table">
-		<tr>
-			<td style="border:0;padding-left:15px;">Layer Name</td>
-			<td style="border:0">Description</td>
-			<td style="border:0">Attributes</td>
-		</tr>
-		
-		{% for row in features %}
-		<tr>
-			<td style="padding-left:15px;">
-			<nobr><i class="fa fa-database"></i> <code>{{row[0]}}</code> ({{row[2]}} points)</nobr>
-			</td>
-			<td>{{row[1]}}</td>
-			<td>{{row[3]|safe}}</td>
-		</tr>
-		{% endfor %}
-		</table>
-	</div>
+		</div>
+	{% else %}
+		<div class="panel-body" style="padding:0;">
+			<table class="table">
+			<tr>
+				<td style="border:0;padding-left:15px;">Layer Name</td>
+				<td style="border:0">Description</td>
+				<td style="border:0">Attributes</td>
+			</tr>
+			{% for row in features %}
+				<tr>
+					<td style="padding-left:15px;">
+					<nobr><i class="fa fa-database"></i> <code>{{row[0]}}</code> ({{row[2]}} points)</nobr>
+					</td>
+					<td>{{row[1]}}</td>
+					<td>{{row[3]|safe}}</td>
+				</tr>
+			{% endfor %}
+			</table>
+		</div>
+	{% endif %}
 </div>
 
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<strong>Overview of uploaded files</strong>
 	</div>
-	<div class="panel-body" style="padding:0;">
-		{% if not attachments %}
-			<p>No attachments have been uploaded yet.</p>
-		{% endif %}
-		<table class="table">
-		<tr>
-			<td style="border:0;padding-left:15px;">Filename</td>
-			<td style="border:0">Type</td>
-			<td style="border:0">Size</td>
-		</tr>
-		
-		{% for file in attachments %}
-		<tr>
-			<td style="padding-left:15px;">
-			{% if file["type"] == "image" %}
-			<i class="fa fa-file-image-o"></i>
-			{% elif file["type"] == "spreadsheet" %}
-			<i class="fa fa-file-excel-o"></i>
-			{% elif file["type"] == "document" %}
-			<i class="fa fa-file-text-o"></i>
-			{% else %}
-			<i class="fa fa-file-o"></i> 
-			{% endif %}
+	{% if not attachments %}
+		<div class="panel-body">
+		<p>No attachments have been uploaded yet.</p>
+		</div>
+	{% else %}
+		<div class="panel-body" style="padding:0;">
+			<table class="table">
+			<tr>
+				<td style="border:0;padding-left:15px;">Filename</td>
+				<td style="border:0">Type</td>
+				<td style="border:0">Size</td>
+			</tr>
+			{% for file in attachments %}
+			<tr>
+				<td style="padding-left:15px;">
+				{% if file["type"] == "image" %}
+				<i class="fa fa-file-image-o"></i>
+				{% elif file["type"] == "spreadsheet" %}
+				<i class="fa fa-file-excel-o"></i>
+				{% elif file["type"] == "document" %}
+				<i class="fa fa-file-text-o"></i>
+				{% else %}
+				<i class="fa fa-file-o"></i> 
+				{% endif %}
 
-			<a href="file?filename={{file["name"]}}">{{file["name"]}}</a></td>
-			<td>{{file["type"]}}</td>
-			<td>{{file["size"]}}</td>
-		</tr>
-		{% endfor %}
-		</table>
-	</div>
+				<a href="file?filename={{file["name"]}}">{{file["name"]}}</a></td>
+				<td>{{file["type"]}}</td>
+				<td>{{file["size"]}}</td>
+			</tr>
+			{% endfor %}
+			</table>
+		</div>
+	{% endif %}
 </div>
 {% endblock %}
