cleaned up templates, view names, and error pages

--- a/application/templates/errors/403_permission_denied.html
+++ b/application/templates/errors/403_permission_denied.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-	<h2>Access denied</h2>
+	<h2>403 Access denied</h2>
 	<p>
 		You do not have permissions to view this page. You're not trying to be sneaky, are you?
 	</p>
