--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -49,6 +49,8 @@
 
 		{% include "messages.html" %}
 
+
+
 		{% block maps %}
 		{% endblock %}
 		<div class="container-fluid">
@@ -63,7 +65,10 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		{% block footjs %}
 
+
+
 		{% endblock %}
+		{% include "feedback.html" %}
 	</body>
 </html>
 
