--- a/application/templates/project.html
+++ b/application/templates/project.html
@@ -37,7 +37,7 @@
 					<div class="panel-body" style="padding:0;">
 						<table class="table table-condensed">
 						<thead>
-						<tr><th>Username</th><th>Full name</th><th>E-mail</th><th>Last data upload</th><th>Web feature services</th></tr>
+						<tr><th>Username</th><th>Full name</th><th>E-mail</th><th>Last data upload (UTC)</th><th>Web feature services</th></tr>
 						</thead>
 						<tbody>
 						{% for user in users %}
