flask user templates and 413 error page

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -41,12 +41,13 @@
 		</style>
 	</head>
 	<body>
-
-{% if current_user.id %}
-		{% block header %}
-			{% include "header.html" %}
-		{% endblock %}
-{% endif %}
+		{% if current_user.id %}
+			{% block header %}
+				{% include "header.html" %}
+			{% endblock %}
+		{% else %}
+			{% include "header-logged-out.html" %}
+		{% endif %}
 
 		{% include "messages.html" %}
 
