--- a/application/templates/messages.html
+++ b/application/templates/messages.html
@@ -13,7 +13,7 @@
 				{% elif category == "debug" %}
 					<span style="color:orange"><i class="fa fa-minus-circle"></i></span> {{message|safe}}
 				{% else %}
-					<span style="color:black"><i class="fa fa-dot-circle-o"></i></span> {{message|safe}}
+					<span style="color:darkblue"><i class="fa fa-info-circle"></i></span> {{message|safe}}
 				{% endif %}
 			</li>
 		{% endfor %}
