use jpeg images

--- a/application/templates/flask_user/login_or_register.html
+++ b/application/templates/flask_user/login_or_register.html
@@ -4,7 +4,7 @@
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
 
 
-<div class="row">
+<div class="row" style="margin-bottom:20px;">
 <div class="col-sm-6">
 
 <h3>{%trans%}Sign in{%endtrans%}</h3>
