--- a/application/templates/header-logged-out.html
+++ b/application/templates/header-logged-out.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="">
   <div class="row" style="margin-bottom:10px;margin-top:10px;">
     <div class="col-sm-6">
       <h2>Fieldwork Online</h2>
@@ -7,7 +7,9 @@
       <img src="/static/gfx/uu.jpg" />
     </div>
   </div>
-  <div class="row" style="margin-bottom:10px;margin-top:0px;">
+</div>
+<div class="container-fluid" style="background-color:#f5f5f5;border-top:1px solid #ddd;">
+  <div class="row" style="padding-top:10px;padding-bottom:10px;">
     <div class="col-sm-12">
       <img src="/static/gfx/frankrijk.jpg" style="width:100%;" />
     </div>
